Use translateX and translateY instead of translate3d to fix blurry text

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -47,7 +47,7 @@
         overflow: auto;
         background: $light-color;
         border-radius: $roundness;
-        transform: translate3d(-50%, -50%, 0);
+        transform: translateX(-50%) translateY(-50%);
 
         @media #{$mobile-break-point} {
             top: auto;
